--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"scripts": {
 		"client": "cd client && npm start",
-		"server": "nodemon server.js",
+		"server": "node server.js",
 		"build": "cd client && npm run build",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
 		"start": "node server.js",
