--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
 		"npm": "8.11.0"
 	},
 	"scripts": {
-		"client": "cd client && npm start",
+		"client": "cd client && npm run start",
 		"server": "node server.js",
 		"build": "cd client && npm run build",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\"",
 		"start": "node server.js",
 		"heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
 	},
