--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm run dev"
+  command = "npm run deploy"
   functions = "netlify/functions"
   publish = "./build"
 
