--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  CI = "npm run deploy"
+  command = "npm run deploy"
   functions = "netlify/functions"
   publish = "./client/build"
 
