--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,8 +1,8 @@
 # example netlify.toml
 [build]
-  command = "npm run deploy"
+  command = "npm run build"
   functions = "netlify/functions"
-  publish = "./client/build"
+  publish = "./build"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
