--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"client": "cd client && npm run start",
 		"server": "node server.js",
-		"build": "cd client && npm run build",
+		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
 		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\"",
 		"start": "node server.js",
