--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 [build]
   command = "npm run deploy"
   functions = "netlify/functions"
-  publish = "./client/build"
+  publish = "build"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
