--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"scripts": {
 		"client": "cd client && npm run start",
-		"server": "node server.js",
+		"server": "nodemon server.js",
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
 		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run netlify-build\"",
@@ -23,6 +23,7 @@
 		"stripe": "6.28.0"
 	},
 	"devDependencies": {
-		"concurrently": "^4.0.1"
+		"concurrently": "^4.0.1",
+		"nodemon": "^1.19.1"
 	}
 }
