--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm run deploy"
+  command = "npm run build-test"
   functions = "netlify/functions"
   publish = "/build"
 
