--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run netlify-build\"",
 		"start": "node server.js",
 		"netlify-build": "cd client && npm install --no-shrinkwrap && npm run build",
-		"build-test": "npm install && npm run server && npm run netlify-build"
+		"build-test": "npm install && npm run server && cd client && npm install && npm run build"
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
