--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
 		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run netlify-build\"",
-		"start": "node server.js",
-		"netlify-build": "cd client && npm install --no-shrinkwrap && npm run build",
-		"build-test": " npm run server && npm run netlify-build"
+		"netlify-build": "cd client && npm install --no-shrinkwrap && npm run build"
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
