--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"npm": "8.11.0"
 	},
 	"scripts": {
-		"client": "cd client && npm run start",
+		"client": "cd client && npm install && npm run start",
 		"server": "nodemon server.js",
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
