--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"client": "cd client && npm run start",
 		"server": "nodemon server.js",
 		"build": "cd client && npm install && npm run build",
-		"dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+		"dev": "concurrently --kill-others --success all \"npm run server\" \"npm run client\"",
 		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\""
 	},
 	"dependencies": {
