--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 	},
 	"scripts": {
 		"client": "cd client && npm run start",
-		"server": "nodemon server.js",
+		"server": "cd .. && nodemon server.js",
 		"build": "cd client && npm install && npm run build",
-		"dev": "concurrently --kill-others --success first \"npm run server\" \"npm run client\"",
+		"dev": "concurrently --kill-others --success first \"npm run client\" \"npm run server\"",
 		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\""
 	},
 	"dependencies": {
