--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"server": "cd .. && nodemon server.js",
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others --success first \"npm run client\" \"npm run server\"",
-		"deploy": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\""
+		"deploy": "concurrently --kill-others-on-fail \"npm run build\" \"npm run server\""
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
