--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"server": "npm install && node server.js",
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others --success first \"npm run client\" \"npm run server\"",
-		"deploy": "concurrently --kill-others-on-fail \"npm run build\" \"npm run server\""
+		"deploy": "concurrently \"npm run server\" \"cd client && npm run build\""
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
