--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 		"npm": "8.11.0"
 	},
 	"scripts": {
-		"client": "cd client && npm run start",
+		"client": "npm run start --prefix client",
 		"server": "nodemon server.js",
 		"build": "cd client && npm install && npm run build",
-		"dev": "concurrently --kill-others --success first \"npm run client\" \"npm run server\"",
-		"deploy": " npm run server && cd client && npm install && npm run build"
+		"dev": "concurrently --kill-others --success first \"npm run server\" \"npm run start --prefix client\"",
+		"deploy": "concurrently --kill-others --success first \"npm run server\" \"npm run start --prefix client"
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
