--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
 		"npm": "8.11.0"
 	},
 	"scripts": {
-		"client-install": "npm install --prefix client",
-		"client": "npm run start --prefix client",
+		"client": "npm install && npm run build",
 		"server": "nodemon server.js",
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others --success first \"npm run server\" \"npm run start --prefix client\"",
-		"deploy": "concurrently --kill-others --success first \"npm run server\" \"npm run start --prefix client\""
+		"deploy": "concurrently --kill-others --success first \"npm run server\" \"npm run client --prefix client\""
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
