--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"client": "npm install && npm run build",
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "npm install && react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
