--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"scripts": {
 		"client": "npm install && npm run build",
-		"server": "nodemon server.js",
+		"server": "node server.js",
 		"build": "cd client && npm install && npm run build",
 		"dev": "concurrently --kill-others --success first \"npm run server\" \"npm run start --prefix client\"",
 		"deploy": "concurrently --kill-others --success first \"npm run server\" \"npm install --prefix client\""
